app/hello/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
  name: hello-ingress
spec:
  rules:
    - host: hello.d4g.tinker.ovh
      http:
        paths:
          - backend:
              service:
                name: hello-service
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - hello.d4g.tinker.ovh
      secretName: hello-vanir
